# full-stack-fastapi

./: .env.example  .pre-commit-config.yaml  README.md
.github/workflows/: backend-ci.yml
backend/: README.md  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  private.py  users.py  utils.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: __init__.py  items.py  seed.py  users.py
backend/tests/: conftest.py  utils.py
backend/tests/api/routes/: test_items.py  test_login.py  test_users.py  test_utils.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: loading.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx  loading.tsx
frontend/src/app/(dashboard)/items/: page.tsx
frontend/src/components/common/: confirm-delete-dialog.tsx  empty-state.tsx  health-check-card.tsx  item-form.tsx  mutation-error-alert.tsx  page-header.tsx  page-size-select.tsx  pagination-controls.tsx  theme-provider.tsx  theme-toggle.tsx  user-form.tsx
frontend/src/components/forms/: change-password-form.tsx  profile-form.tsx
frontend/src/hooks/: use-auth.ts  use-has-mounted.ts  use-items.ts  use-pagination-query-params.ts  use-users.ts
frontend/src/lib/: config.ts  query-client.ts
frontend/src/lib/api/: auth.ts  client.ts  errors.ts  get-api-error-message.tsx  health.ts  items.ts  login.ts  users.ts
(+2 files in other folders)
